Merge of latest version of Passerelle from Google labs repository